Home Page left-align bug fix

--- a/client/src/assets/styles/Education.scss
+++ b/client/src/assets/styles/Education.scss
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
+    text-align: right;
     padding-right: 30px;
     justify-content: center;
     width: 50%;
