--- a/client/src/assets/styles/Experience.scss
+++ b/client/src/assets/styles/Experience.scss
@@ -74,6 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: end;
+    text-align: right;
     width: 35%;
     height: 100%;
     padding-right: 30px;
